Change recipient name from Daksha to Daniela

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>For Daksha 💖</title>
+<title>For Daniela 💖</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
@@ -72,7 +72,7 @@ let step = 0;
 let envelope = 1;
 
 const env1 = [
-  "My Cutie Daksha 💗",
+  "My Cutie Daniela 💗",
   "There’s something about you…",
   "That makes everything feel calm :>",
   "Your smile is my favorite XD",
@@ -80,15 +80,15 @@ const env1 = [
 ];
 
 const fullLetter =
-"My Dear Daksha 💖\n\n" +
+"My Dearest Daniela 💖\n\n" +
 "You truly mean more to me than I can explain.\n\n" +
 "You make ordinary days feel special just by being you.\n\n" +
 "No matter what happens,\n" +
 "You’ll always be my favourite my babyyyy.\n\n" +
-"Alwayssssss :P ❤️";
+"Alwayssssss ❤️ and I am sorry😭";
 
 function unlock() {
-  if (document.getElementById("pass").value !== "Yuki") {
+  if (document.getElementById("pass").value !== "Daniela") {
     alert("Try again 💭");
     return;
   }
@@ -120,4 +120,5 @@ function next() {
 
 </body>
 </html>
+
 
